:bug: Fixed stats not showing in firefox

--- a/portfolio-react/src/App.css
+++ b/portfolio-react/src/App.css
@@ -415,7 +415,6 @@ body {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 100%;
     padding: 10px;
     box-sizing: border-box;
 }
